# ToDO

./: README.md
MyToDo/: CMakeLists.txt  Main.qml  main.cpp
MyToDo/include/: db_manager.h  filter_manager.h  task.h  task_manager.h  taskmanager.h
MyToDo/qml/: DatePicker.qml  EditDialog.qml  Filtering.qml
MyToDo/src/: db_manager.cpp  filter_manager.cpp  task.cpp  task_manager.cpp  taskmanager.cpp
